--- a/人/机器/计算机/编程语言/富文本标记/style.css
+++ b/人/机器/计算机/编程语言/富文本标记/style.css
@@ -15,8 +15,8 @@ test-tag {
 .weizhi + div {
   background-color: cadetblue;
 }
-.weizhi + div ::before{
-content: "";
+.weizhi + div ::before {
+  content: "";
 }
 
 .weizhi :nth-child(4) {
@@ -26,6 +26,9 @@ content: "";
 .p1 {
   text-align: center;
   line-height: 1em;
+  color: rgba(0, 0, 0, 0.9);
+  opacity: 0.5;
+  text-decoration: underline;
   background-color: rgba(33, 33, 33, 0.2);
   /* text-shadow: 0.1em 0.1em 0.1em #333; */
 }
@@ -108,3 +111,35 @@ content: "";
     url(./resource/2.png) right top no-repeat;
   /* //悬停效果 */
 }
+
+/* flex弹性模型 */
+.flex1{
+    background-color:#aaa;
+    height:5em;
+    display:flex; 
+    flex-direction:row-reverse;
+    /* 轴向排列 */
+    justify-content:center;
+    /* 逆轴向排列 */
+    align-items: center;
+}
+
+.flex2{
+    width:10em;
+    display:flex; 
+    flex-wrap:wrap-reverse;
+}
+
+#flex3 {
+    width: 350px;
+    height: 100px;
+    border: 1px solid #c3c3c3;
+    display: flex;
+}
+
+#flex3 div:nth-of-type(1) {flex-grow: 1;}
+#flex3 div:nth-of-type(2) {flex-grow: 2;}
+#flex3 div:nth-of-type(3) {flex-grow: 3;}
+#flex3 div:nth-of-type(4) {flex-grow: 4;}
+#flex3 div:nth-of-type(5) {flex-grow: 1;}
+
